# Stratos

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE.md  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/battery/: CMakeLists.txt
components/battery/include/: battery.h
components/battery/src/: battery.c
components/ble_nus/: CMakeLists.txt
components/ble_nus/include/: ble_nus.h
components/ble_nus/src/: ble_nus.c
components/board_profile/: CMakeLists.txt
components/board_profile/include/: board_profile.h
components/board_profile/src/: board_profile.c
components/button/: CMakeLists.txt
components/button/include/: button.h
components/button/src/: button.c
components/config_store/: CMakeLists.txt
components/config_store/include/: config_store.h
components/config_store/src/: config_store.c
components/decoder_core/: CMakeLists.txt
components/decoder_dfm/: CMakeLists.txt
components/decoder_m10/: CMakeLists.txt
components/decoder_m20/: CMakeLists.txt
components/decoder_rs41/: CMakeLists.txt
components/http_ui/: CMakeLists.txt
components/oled_ui/: CMakeLists.txt
components/ota/: CMakeLists.txt
components/platform_common/: CMakeLists.txt
components/rf_sx1276/: CMakeLists.txt
components/sonde_state/: CMakeLists.txt
components/sonde_types/: CMakeLists.txt
components/stratos_codec/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt
docs/fsd/: Balloon-Receiver FSD.md  MySondyGo-IDF FSD.md  Stratos FSD.md
main/: CMakeLists.txt  app_main.c  idf_component.yml
(+36 files in other folders)
